# eikonal-unstructured

./: .dropbox  .gitignore  .gitignore~  README.md
Debug/debugStates/: plotStates.py
Debug/debugValues/: plotValues.py
Debug/debugVelocity/: plotVelocity.py
Grids/: rectangle-structured.msh  square-unstructured.msh
given-code/: Ray_Acoustics.c  Tcharfmmnv.c  Tcharfmmnv.h  mcfmmi.c
given-code/Figure Codes and Data/: runErrorFig.m  runRate.m  runTableData.m  tabledata035.txt  tabledata05.txt
src/: .EikonalSolver.cpp.swp  .EikonalSolver.h.swp  CMakeLists.txt  EikonalSolver.cpp  EikonalSolver.h  Element.cpp  Element.h  Mesh2D.cpp  Node.cpp  Node.h  current.sublime-workspace  main.cpp  main.h
test/: plotMesh.py
test/checkStates/: plotMesh.py
